ruby code in view

--- a/app/views/welcome/products.html.erb
+++ b/app/views/welcome/products.html.erb
@@ -1,6 +1,13 @@
-<h1>Produtos</h1>
+<div class="pwhite" style="margin-left: 100px;">
+  <p class="whitebody">
 
-<div class="pwhite">
+  </p>
+
+</div>
+
+<h1 style="margin-top: 100px;">Produtos</h1>
+
+<div class="pwhite" style="margin-top: -400px;">
   <p class="whitebody">
       <h5 class="h5bw">
         <strong>
