modelo funcionando antes de consertar a view contact

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -38,7 +38,7 @@ body {
    width: 100%; /* for IE 6 */
 }
 
-.whitebody {
+.whitebodyproduct {
   font-size: 1.8em;
   letter-spacing: -1px;
   word-spacing: 10px;
