--- a/app/views/welcome/content.html.erb
+++ b/app/views/welcome/content.html.erb
@@ -1,18 +1,20 @@
-
-
-<h1>Produtos</h1>
+<h1>Neviar Propaganda</h1>
 
 <div class="pwhite">
   <p class="whitebodyproduct">
       <h5 class="h5bw">
         <strong>
-          Cadê Minha Tribo App
+          Noma de Empresa
         <strong>
       </h5>
     </p>
 
-    <p class = "trace">
-    _______________________________
+<p class="whitebodyproduct">
+      <h5 class="h5bw">
+        <strong>
+          Area de Atuacao
+        <strong>
+      </h5>
     </p>
 
     <div>
